# Weye

./: Cargo.toml  LICENSE  README.md
src/: config_parse.rs  main.rs  tray.rs
