# Copyright (c) 2022 Yakkhini
# Weye is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
# EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
# MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "weye"
version = "0.1.0"
authors = ["Yakkhini <sign@yechanv.cc>"]
edition = "2021"
description = "A lightweight screenshot for sway."
repository = "https://github.com/Yakkhini/Weye"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
libappindicator = "0.7.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"